[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.5
margin_top = -184.5
margin_right = 322.5
margin_bottom = 184.5
color = Color( 0, 0, 0, 0.784314 )

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -17.5
margin_right = 65.5
margin_bottom = 17.5
focus_mode = 0
custom_colors/font_color_hover = Color( 0.133333, 0.658824, 0.129412, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "CONTINUAR"
flat = true

[node name="Home" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 36.0
margin_right = 108.0
margin_bottom = 71.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.133333, 0.658824, 0.129412, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "IR PARA CASA"
flat = true

[node name="HUD" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
